[gd_scene load_steps=8 format=3 uid="uid://cfxghwimsl45n"]

[ext_resource type="Script" path="res://Scenes/Templates/level.gd" id="1_lvad4"]
[ext_resource type="Texture2D" uid="uid://dp31gcxumkauh" path="res://Assets/background_32_updated_flipped.png" id="2_m2wjp"]
[ext_resource type="PackedScene" uid="uid://4wkj23cavyvp" path="res://Scenes/Player/Player.tscn" id="2_xj1xt"]
[ext_resource type="TileSet" uid="uid://cik6kljb8n8ou" path="res://Scenes/Templates/level.tres" id="3_8f5pw"]
[ext_resource type="AudioStream" uid="uid://clp3wibyadpgm" path="res://Assets/435531__adnova__happy-cave.wav" id="5_uiocb"]

[sub_resource type="Animation" id="Animation_iv5el"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"pause"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D2:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ri26w"]
_data = {
"fade_in": SubResource("Animation_iv5el")
}

[node name="Level" type="Node2D"]
script = ExtResource("1_lvad4")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
z_index = 1
texture_filter = 3
texture_repeat = 3
position = Vector2(3620, 208)
scale = Vector2(6.36527, 10.4453)
texture = ExtResource("2_m2wjp")
region_enabled = true
region_rect = Rect2(-3, 0, 1156, 128)
metadata/_edit_lock_ = true

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
position = Vector2(0, 600)
scale = Vector2(2, 2)
tile_set = ExtResource("3_8f5pw")
format = 2
layer_0/name = "Background"
layer_0/y_sort_enabled = true
layer_0/tile_data = PackedInt32Array(-65536, 0, 0, 0, 0, 1, 65536, 0, 2, 131072, 0, 3, 196608, 0, 4, -65535, 131072, 0, 1, 131072, 1, 65537, 131072, 2, 131073, 131072, 3, 196609, 131072, 4, -65534, 196608, 0, 2, 196608, 1, 65538, 196608, 2, 131074, 196608, 3, 196610, 196608, 4, -65533, 65536, 0, 3, 65536, 1, 65539, 65536, 2, 131075, 65536, 3, 196611, 65536, 4, -65532, 131072, 0, 4, 131072, 1, 65540, 131072, 2, 131076, 131072, 3, 196612, 131072, 4, -65531, 196608, 0, 5, 196608, 1, 65541, 196608, 2, 131077, 196608, 3, 196613, 196608, 4, -65530, 65536, 0, 6, 65536, 1, 65542, 65536, 2, 131078, 65536, 3, 196614, 65536, 4, -65529, 131072, 0, 7, 131072, 1, 65543, 131072, 2, 131079, 131072, 3, 196615, 131072, 4, -65528, 196608, 0, 8, 196608, 1, 65544, 196608, 2, 131080, 196608, 3, 196616, 196608, 4, -65527, 65536, 0, 9, 65536, 1, 65545, 65536, 2, 131081, 65536, 3, 196617, 65536, 4, -65526, 131072, 0, 10, 131072, 1, 65546, 131072, 2, 131082, 131072, 3, 196618, 131072, 4, -65525, 196608, 0, 11, 196608, 1, 65547, 196608, 2, 131083, 196608, 3, 196619, 196608, 4, -65524, 65536, 0, 12, 65536, 1, 65548, 65536, 2, 131084, 65536, 3, 196620, 65536, 4, -65523, 131072, 0, 13, 131072, 1, 65549, 131072, 2, 131085, 131072, 3, 196621, 131072, 4, -65522, 196608, 0, 14, 196608, 1, 65550, 196608, 2, 131086, 196608, 3, 196622, 196608, 4, -65521, 65536, 0, 15, 65536, 1, 65551, 65536, 2, 131087, 65536, 3, 196623, 65536, 4, -65520, 131072, 0, 16, 131072, 1, 65552, 131072, 2, 131088, 131072, 3, 196624, 131072, 4, -65519, 196608, 0, 17, 196608, 1, 65553, 196608, 2, 131089, 196608, 3, 196625, 196608, 4, -65518, 65536, 0, 18, 65536, 1, 65554, 65536, 2, 131090, 65536, 3, 196626, 65536, 4, -65517, 131072, 0, 19, 131072, 1, 65555, 131072, 2, 131091, 131072, 3, 196627, 131072, 4, -65516, 196608, 0, 20, 196608, 1, 65556, 196608, 2, 131092, 196608, 3, 196628, 196608, 4, -65515, 65536, 0, 21, 65536, 1, 65557, 65536, 2, 131093, 65536, 3, 196629, 65536, 4, -65514, 131072, 0, 22, 131072, 1, 65558, 131072, 2, 131094, 131072, 3, 196630, 131072, 4, -65513, 196608, 0, 23, 196608, 1, 65559, 196608, 2, 131095, 196608, 3, 196631, 196608, 4, -65512, 65536, 0, 24, 65536, 1, 65560, 65536, 2, 131096, 65536, 3, 196632, 65536, 4, -65511, 131072, 0, 25, 131072, 1, 65561, 131072, 2, 131097, 131072, 3, 196633, 131072, 4, -65510, 196608, 0, 26, 196608, 1, 65562, 196608, 2, 131098, 196608, 3, 196634, 196608, 4, -65509, 65536, 0, 27, 65536, 1, 65563, 65536, 2, 131099, 65536, 3, 196635, 65536, 4, -65508, 131072, 0, 28, 131072, 1, 65564, 131072, 2, 131100, 131072, 3, 196636, 131072, 4, -65507, 196608, 0, 29, 196608, 1, 65565, 196608, 2, 131101, 196608, 3, 196637, 196608, 4, -65506, 65536, 0, 30, 65536, 1, 65566, 65536, 2, 131102, 65536, 3, 196638, 65536, 4, -65505, 131072, 0, 31, 131072, 1, 65567, 131072, 2, 131103, 131072, 3, 196639, 131072, 4, -65504, 196608, 0, 32, 196608, 1, 65568, 196608, 2, 131104, 196608, 3, 196640, 196608, 4, -65503, 65536, 0, 33, 65536, 1, 65569, 65536, 2, 131105, 65536, 3, 196641, 65536, 4, -65502, 131072, 0, 34, 131072, 1, 65570, 131072, 2, 131106, 131072, 3, 196642, 131072, 4, -65501, 196608, 0, 35, 196608, 1, 65571, 196608, 2, 131107, 196608, 3, 196643, 196608, 4, -65500, 65536, 0, 36, 65536, 1, 65572, 65536, 2, 131108, 65536, 3, 196644, 65536, 4, -65499, 131072, 0, 37, 131072, 1, 65573, 131072, 2, 131109, 131072, 3, 196645, 131072, 4, -65498, 196608, 0, 38, 196608, 1, 65574, 196608, 2, 131110, 196608, 3, 196646, 196608, 4, -65497, 262144, 0, 39, 262144, 1, 65575, 262144, 2, 131111, 262144, 3, 196647, 262144, 4)
layer_1/name = "Ground"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array(1245183, 131073, 0, 1310719, 131073, 1, 1376255, 131073, 2, 1441791, 131073, 3, 1507327, 131073, 4, 1179648, 196609, 0, 1245184, 196609, 1, 1310720, 196609, 2, 1376256, 196609, 3, 1441792, 196609, 4, 1179649, 65537, 0, 1245185, 65537, 1, 1310721, 65537, 2, 1376257, 65537, 3, 1441793, 65537, 4, 1179650, 131073, 0, 1245186, 131073, 1, 1310722, 131073, 2, 1376258, 131073, 3, 1441794, 131073, 4, 1179651, 196609, 0, 1245187, 196609, 1, 1310723, 196609, 2, 1376259, 196609, 3, 1441795, 196609, 4, 1179652, 65537, 0, 1245188, 65537, 1, 1310724, 65537, 2, 1376260, 65537, 3, 1441796, 65537, 4, 1179653, 131073, 0, 1245189, 131073, 1, 1310725, 131073, 2, 1376261, 131073, 3, 1441797, 131073, 4, 1179654, 196609, 0, 1245190, 196609, 1, 1310726, 196609, 2, 1376262, 196609, 3, 1441798, 196609, 4, 1179655, 65537, 0, 1245191, 65537, 1, 1310727, 65537, 2, 1376263, 65537, 3, 1441799, 65537, 4, 1179656, 131073, 0, 1245192, 131073, 1, 1310728, 131073, 2, 1376264, 131073, 3, 1441800, 131073, 4, 1179657, 196609, 0, 1245193, 196609, 1, 1310729, 196609, 2, 1376265, 196609, 3, 1441801, 196609, 4, 1179658, 65537, 0, 1245194, 65537, 1, 1310730, 65537, 2, 1376266, 65537, 3, 1441802, 65537, 4, 1179659, 131073, 0, 1245195, 131073, 1, 1310731, 131073, 2, 1376267, 131073, 3, 1441803, 131073, 4, 1179660, 196609, 0, 1245196, 196609, 1, 1310732, 196609, 2, 1376268, 196609, 3, 1441804, 196609, 4, 1179661, 65537, 0, 1245197, 65537, 1, 1310733, 65537, 2, 1376269, 65537, 3, 1441805, 65537, 4, 1179662, 131073, 0, 1245198, 131073, 1, 1310734, 131073, 2, 1376270, 131073, 3, 1441806, 131073, 4, 1179663, 196609, 0, 1245199, 196609, 1, 1310735, 196609, 2, 1376271, 196609, 3, 1441807, 196609, 4, 1179664, 65537, 0, 1245200, 65537, 1, 1310736, 65537, 2, 1376272, 65537, 3, 1441808, 65537, 4, 1179665, 131073, 0, 1245201, 131073, 1, 1310737, 131073, 2, 1376273, 131073, 3, 1441809, 131073, 4, 1179666, 196609, 0, 1245202, 196609, 1, 1310738, 196609, 2, 1376274, 196609, 3, 1441810, 196609, 4, 1179667, 65537, 0, 1245203, 65537, 1, 1310739, 65537, 2, 1376275, 65537, 3, 1441811, 65537, 4, 1179668, 131073, 0, 1245204, 131073, 1, 1310740, 131073, 2, 1376276, 131073, 3, 1441812, 131073, 4, 1179669, 196609, 0, 1245205, 196609, 1, 1310741, 196609, 2, 1376277, 196609, 3, 1441813, 196609, 4, 1179670, 65537, 0, 1245206, 65537, 1, 1310742, 65537, 2, 1376278, 65537, 3, 1441814, 65537, 4, 1179671, 131073, 0, 1245207, 131073, 1, 1310743, 131073, 2, 1376279, 131073, 3, 1441815, 131073, 4, 1179672, 196609, 0, 1245208, 196609, 1, 1310744, 196609, 2, 1376280, 196609, 3, 1441816, 196609, 4, 1179673, 65537, 0, 1245209, 65537, 1, 1310745, 65537, 2, 1376281, 65537, 3, 1441817, 65537, 4, 1179674, 196609, 0, 1245210, 196609, 1, 1310746, 196609, 2, 1376282, 196609, 3, 1441818, 196609, 4, 1179675, 65537, 0, 1245211, 65537, 1, 1310747, 65537, 2, 1376283, 65537, 3, 1441819, 65537, 4, 1179676, 131073, 0, 1245212, 131073, 1, 1310748, 131073, 2, 1376284, 131073, 3, 1441820, 131073, 4, 1179677, 196609, 0, 1245213, 196609, 1, 1310749, 196609, 2, 1376285, 196609, 3, 1441821, 196609, 4, 1179678, 65537, 0, 1245214, 65537, 1, 1310750, 65537, 2, 1376286, 65537, 3, 1441822, 65537, 4, 1179679, 131073, 0, 1245215, 131073, 1, 1310751, 131073, 2, 1376287, 131073, 3, 1441823, 131073, 4, 1179680, 196609, 0, 1245216, 196609, 1, 1310752, 196609, 2, 1376288, 196609, 3, 1441824, 196609, 4, 1179681, 65537, 0, 1245217, 65537, 1, 1310753, 65537, 2, 1376289, 65537, 3, 1441825, 65537, 4, 1179682, 131073, 0, 1245218, 131073, 1, 1310754, 131073, 2, 1376290, 131073, 3, 1441826, 131073, 4, 1179683, 196609, 0, 1245219, 196609, 1, 1310755, 196609, 2, 1376291, 196609, 3, 1441827, 196609, 4, 1179684, 65537, 0, 1245220, 65537, 1, 1310756, 65537, 2, 1376292, 65537, 3, 1441828, 65537, 4, 1179685, 131073, 0, 1245221, 131073, 1, 1310757, 131073, 2, 1376293, 131073, 3, 1441829, 131073, 4, 1179686, 196609, 0, 1245222, 196609, 1, 1310758, 196609, 2, 1376294, 196609, 3, 1441830, 196609, 4, 1179687, 65537, 0, 1245223, 65537, 1, 1310759, 65537, 2, 1376295, 65537, 3, 1441831, 65537, 4, 1179688, 131073, 0, 1245224, 131073, 1, 1310760, 131073, 2, 1376296, 131073, 3, 1441832, 131073, 4, 1179689, 196609, 0, 1245225, 196609, 1, 1310761, 196609, 2, 1376297, 196609, 3, 1441833, 196609, 4, 1179690, 65537, 0, 1245226, 65537, 1, 1310762, 65537, 2, 1376298, 65537, 3, 1441834, 65537, 4)
layer_2/name = "Items"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array()

[node name="Player" parent="." instance=ExtResource("2_xj1xt")]
position = Vector2(34, 575)

[node name="Camera2D" type="Camera2D" parent="Player"]
limit_left = 0
limit_top = 0
limit_bottom = 650

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
texture_filter = 3
texture_repeat = 3
position = Vector2(3673, 327)
scale = Vector2(6.36527, 5.10938)
texture = ExtResource("2_m2wjp")
region_enabled = true
region_rect = Rect2(-3, 0, 1156, 128)
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ri26w")
}
autoplay = "fade_in"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -53.0
offset_top = -31.0
offset_right = 53.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
tooltip_text = "Space to Jump 
Z to run"
text = "SPACE TO START"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -57.0
offset_right = 57.0
offset_bottom = 55.0
grow_horizontal = 2

[node name="HighScore" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.235294, 0.258824, 0.768627, 1)
theme_override_colors/font_shadow_color = Color(0.956863, 0.87451, 0.745098, 1)
theme_override_font_sizes/font_size = 25
text = "High Score: 0"
horizontal_alignment = 1

[node name="Score" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.235294, 0.258824, 0.768627, 1)
theme_override_colors/font_shadow_color = Color(0.956863, 0.87451, 0.745098, 1)
theme_override_font_sizes/font_size = 20
text = "Score: "
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_uiocb")
volume_db = -19.676

[node name="Node2D" type="Node2D" parent="."]

[connection signal="player_died" from="Player" to="." method="_on_player_player_died"]
[connection signal="spawn_obstacle" from="Player" to="." method="_on_player_spawn_obstacle"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
